# ParallelAndDistributedComputing

./: Laba1Task1.cpp  Laba1Task2Atomic  Laba1Task2Mutex.cpp  README.md
Homework1/: CMakeLists.txt  main.cpp  processed_text1.txt  processed_text2.txt  text1.txt  text2.txt
Laba1/: Laba1Task1.cpp  Laba1Task2Atomic  Laba1Task2Atomic.cpp  Laba1Task2ErrorDemonstration.cpp
Laba2/task1/: employee.h  main.cpp
Laba2/task2/: main.cpp  order.h
Laba3/: CMakeLists.txt  Server.cpp  Server.h  Session.cpp  Session.h  main.cpp
RK1/: task1.cpp  task2.cpp
Seminar2/: task1.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp  task6.cpp  task7.cpp  task8.cpp  task9.cpp
Seminar2/task10-task11/: FileManager.cpp  FileManager.hpp  Group.cpp  Group.hpp  Person.hpp  Person.сpp  RecordBook.cpp  RecordBook.hpp  Student.cpp  Student.hpp  Teacher.cpp  Teacher.hpp  main.cpp
Seminar3/:  task8.cpp  task1.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp  task6.cpp  task7.cpp
Seminar4/: task1.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp  task6.cpp  task7.cpp
Seminar5/: task1.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp  task6.cpp
